recursion.lessons.recursion.koch.Crab.scala.error
Crab:2: error: not found: value current
	current(levels)
        ^